--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -44,6 +44,7 @@
 		"@cloudflare/workers-types": "catalog:default",
 		"@types/node": "catalog:default",
 		"@vite-plugin-cloudflare/typescript-config": "workspace:*",
+		"esbuild": "^0.24.2",
 		"magic-string": "^0.30.12",
 		"tsup": "^8.3.0",
 		"typescript": "catalog:default",
