Added new experimental package entry point

--- a/packages/cloudflare-config/package.json
+++ b/packages/cloudflare-config/package.json
@@ -29,6 +29,7 @@
 		"@cloudflare/workers-types": "catalog:default",
 		"@vite-plugin-cloudflare/typescript-config": "workspace:*",
 		"tsup": "^8.3.0",
-		"typescript": "catalog:default"
+		"typescript": "catalog:default",
+		"wrangler": "catalog:default"
 	}
 }
