--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -21,6 +21,10 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"import": "./dist/index.js"
+		},
+		"./experimental": {
+			"types": "./dist/experimental/index.d.ts",
+			"import": "./dist/experimental/index.js"
 		}
 	},
 	"main": "./dist/index.js",
