--- a/packages/cloudflare-config/package.json
+++ b/packages/cloudflare-config/package.json
@@ -25,8 +25,13 @@
 		"check:types": "tsc --build",
 		"watch": "tsup --watch"
 	},
+	"dependencies": {
+		"esbuild": "^0.24.2",
+		"zod": "^3.24.1"
+	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "catalog:default",
+		"@types/node": "catalog:default",
 		"@vite-plugin-cloudflare/typescript-config": "workspace:*",
 		"tsup": "^8.3.0",
 		"typescript": "catalog:default",
