--- a/packages/vite-plugin-cloudflare/tsconfig.plugin.json
+++ b/packages/vite-plugin-cloudflare/tsconfig.plugin.json
@@ -5,5 +5,9 @@
 		"declarationMap": true
 	},
 	"include": ["src"],
-	"exclude": ["src/asset-workers", "src/runner-worker"]
+	"exclude": [
+		"src/asset-workers",
+		"src/runner-worker",
+		"src/experimental/runner-worker"
+	]
 }
