--- a/playground/ts-config-example/tsconfig.worker.json
+++ b/playground/ts-config-example/tsconfig.worker.json
@@ -1,4 +1,4 @@
 {
 	"extends": ["@vite-plugin-cloudflare/typescript-config/worker.json"],
-	"include": ["src"]
+	"include": ["src", "cloudflare.config.ts"]
 }
