--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"check:types": "tsc --build && pnpm -r check:types",
 		"fix": "pnpm run fix:prettier",
 		"fix:prettier": "prettier --write .",
-		"postinstall": "pnpm -F @flarelabs-net/vite-plugin-cloudflare build",
+		"postinstall": "pnpm -F @flarelabs-net/vite-plugin-cloudflare build && pnpm -F @flarelabs-net/cloudflare-config build",
 		"test": "pnpm test-unit && pnpm test-serve && pnpm test-build",
 		"test-build": "cross-env VITE_TEST_BUILD=1 vitest run -c vitest.config.e2e.ts",
 		"test-serve": "vitest run -c vitest.config.e2e.ts",
